--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@dcloudio/uni-mp-weixin": "3.0.0-4060620250520001",
     "@dcloudio/uni-mp-xhs": "3.0.0-4060620250520001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-4060620250520001",
+    "echarts": "^5.6.0",
     "vue": "~3.4.38"
   },
   "devDependencies": {
