--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,5 +1,8 @@
 {
-  "extends": "@xiaohe01/tsconfig/tsconfig.app-vue.json",
+  "extends": [
+    "@xiaohe01/tsconfig/tsconfig.basic.json",
+    "@xiaohe01/tsconfig/tsconfig.vue.json"
+  ],
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
@@ -10,7 +13,8 @@
       "@dcloudio/types",
       "@uni-helper/uni-app-types",
       "miniprogram-api-typings"
-    ]
+    ],
+    "allowJs": true
   },
   "vueCompilerOptions": {
     "plugins": [
@@ -18,10 +22,7 @@
     ]
   },
   "include": [
-    "src/**/*.ts",
-    "src/**/*.d.ts",
-    "src/**/*.tsx",
-    "src/**/*.vue",
-    "types/**/*.d.ts"
+    "src/**/*",
+    "types/**/*"
   ]
 }
